# pdf2latex

./: .gitignore  Cargo.toml  PDF.py  README.md  TextZone.py  main.py  utils.py
font_base_generator/: Cargo.toml
font_base_generator/src/: main.rs
lib/: pdfium.dll.lib
python/: PDF.py  RandomPDF.py  TextZone.py  main.py  recognize_formula.sh  requirements.txt  setup_python_ia.sh
src/: args.rs  dictionary.rs  font.rs  glyph.rs  latex.rs  lib.rs  main.rs  pdf.rs  poppler.rs  result.rs  text.rs  utils.rs
src/data/: accents.txt  arrows.txt  constructs.txt  ligatures.txt  operations.txt  punctuations.txt
src/fonts/: code.rs  fonts.rs  glyph.rs  size.rs  style.rs
src/fonts/data/: greeks.txt  math_accents.txt
src/pdf/: line.rs  matrix.rs  page.rs  pdf.rs  word.rs
src/utils/: args.rs  font.rs  glyph.rs  result.rs  style.rs  utils.rs
src/utils/data/: hebrews.txt
src/vit/: model.rs
utils/: Cargo.toml
utils/src/: args.rs  font.rs  glyph.rs  lib.rs  size.rs  utils.rs
utils/src/data/: miscellaneous.txt
