[package]
name = "pdf2latex"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.21"
clap = { version = "4.3.5", features = ["derive"] }
image = "0.24.6"
ucd = "0.1.1"
strsim = "0.10.0"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
unicode-segmentation = "1.10.1"
